fix top alert not being absolute on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -485,6 +485,10 @@ footer img {
 
 /* narrow and short  */
 @media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  #top_alert {
+    position: absolute;
+  }
+
   header {
     position: absolute;
   }
@@ -494,6 +498,7 @@ footer img {
 /* mobile navbar only */
 @media only screen and (max-width: 760px) {
   #top_alert {
+    position: absolute;
     top: 80px;
   }
 
