--- a/nagrania/css/style.css
+++ b/nagrania/css/style.css
@@ -374,6 +374,10 @@ footer img {
 
 /* narrow and short  */
 @media only screen and (max-height: 575.98px) and (orientation: landscape) {
+  #top_alert {
+    position: absolute;
+  }
+
   header {
     position: absolute;
   }
@@ -383,6 +387,7 @@ footer img {
 /* mobile navbar only */
 @media only screen and (max-width: 760px) {
   #top_alert {
+    position: absolute;
     top: 80px;
   }
 
